# split-9

./: .env.example  .gitignore  HANDOFF.md  LICENSE  README.en.md  README.ja.md  README.md  README.zh.md  pyproject.toml  requirements.txt
configs/gonet/: default.yaml  poc.yaml
configs/train/: full.yaml  selfplay.yaml
docs/: architecture.md  codebase_study.md  decisions.md  evaluation_protocol.md  glossary.md
docs/paper/: README.en.md  README.ja.md  README.md  README.zh.md  outline.md
scripts/: baselines.py  generate_phase3_data.py  make_figures.py  measure_apc.py  measure_faithfulness.py  sample_generations.py  smoke_test.py  test_phase2_forward.py  train_adapter.py  train_gonet.py
src/split_brain_go/adapter/: projection.py  xattn.py
src/split_brain_go/data/: dataset.py  generation.py  synthetic.py
src/split_brain_go/eval/: apc.py  elo.py  faithfulness.py  winrate.py
src/split_brain_go/gonet/: batched_mcts.py  mcts.py  network.py
src/split_brain_go/llm/: instrumented.py
src/split_brain_go/training/: adapter_train.py  checkpoint.py  (+3 more)
tests/: test_phase2_integration.py
tests/adapter/: test_projection.py  test_xattn.py
tests/data/: test_dataset.py  test_generation.py  test_synthetic.py
tests/eval/: test_apc.py  test_elo.py  test_faithfulness.py  test_winrate.py
tests/gonet/: test_batched_mcts.py  test_mcts.py  test_network.py
tests/llm/: test_instrumented.py
tests/training/: test_adapter_train.py  test_batched_selfplay.py  test_checkpoint.py  test_joint_train.py  test_replay_buffer.py  test_selfplay.py
tests/utils/: test_logging.py
(+2 files in other folders)
